fixed navbar z-index

--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,7 @@ body {
     width: 100%;
     height: 50px;
     background-color: #333;
+    z-index: 1000;
 }
 #topnav a{
     text-decoration: none;
